fixed some layout issues with the svgs

--- a/public/style.css
+++ b/public/style.css
@@ -40,8 +40,9 @@ ul {
   width: 100%;
 }
 
+/*i added 90% to this height and it fixed our overflow problem... not sure wtf is goin on*/
 .page {
-  height: 100%;
+  height: 90%;
   position: absolute;
   width: 100%;
 }
@@ -130,8 +131,8 @@ img.landing-clouds {
 img.clouds-bottom {
   width: 100%;
   height: auto;
-  position: absolute;
-  top: 0;
+/*  position: absolute;
+  top: 0;*/
 }
 
 
@@ -140,8 +141,8 @@ img.clouds-bottom {
 img.berlin-skyline {
   width: 100%;
   height: auto;
-  position: absolute;
-  bottom: 0;
+/*  position: absolute;
+  bottom: 0;*/
 }
 
 img {
@@ -160,6 +161,17 @@ img {
   background: -ms-linear-gradient(top,  rgba(138,176,196,1) 0%,rgba(197,215,229,1) 52%,rgba(255,255,255,1) 99%);
   background: linear-gradient(to bottom,  rgba(138,176,196,1) 0%,rgba(197,215,229,1) 52%,rgba(255,255,255,1) 99%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#8ab0c4', endColorstr='#ffffff',GradientType=0 );
+}
+
+/*chat top and bottom, new classes for new divs to contain the chat area and the svgs*/
+.chat-top {
+  height: 10%;
+  top: 0;
+}
+
+.chat-bottom {
+  height: 10%;
+  bottom: 0;
 }
 
 /* Font */
@@ -181,9 +193,11 @@ img {
 
 /* Messages */
 
+/*the margin on this box is messed up*/
 .messageBox {
   padding: 3px;
-  bottom: 0;
+  margin: 10px;
+  /*bottom: 0;*/
   width: 100%;
   border: 1px solid black;
 }
@@ -203,7 +217,7 @@ img {
 }
 
 .chatArea {
-  height: 100%;
+  height: 80%;
 }
 
 .messages {
